Updated to latest api revision
